@@ -77,7 +77,7 @@ google:ja    = Google検索(ja),     UTF-8, https://www.google.co.jp/search?lr=l
 google:image = Googleイメージ検索, UTF-8, https://images.google.co.jp/images?lr=lang_ja&ie=utf-8&oe=utf-8&q=
 google:news  = Googleニュース検索, UTF-8, https://news.google.co.jp/news?lr=lang_ja&ie=utf-8&oe=utf-8&q=
 google:transit = Googleトランジット, UTF-8, 2, https://www.google.co.jp/transit?saddr=$1&daddr=$2
-google:qr      = QRコード生成, image, 999, http://chart.apis.google.com/chart?cht=qr&chs=92x92&chl=$$
+google:qr      = QRコード生成, image, 999, https://chart.googleapis.com/chart?cht=qr&chs=92x92&chl=$$
 google:qr#link = QRコード生成, image, 999, $$
 
 g   = >google
@@ -150,7 +150,7 @@ math  = MathJax API, ASCII, 1, <span class="math">#1</span>
 mref  = MathJax Ref, ASCII, 1, <span class="mathref"><span class="math">\ref{#1}</span></span>
 mrefa = MathJax Ref, ASCII, 1, <span class="mathref"><span class="math">(\ref{#1})</span></span>
 
-gtex = Google Chart API, ASCII, 1, <img src="http://chart.apis.google.com/chart?cht=tx&chf=bg,s,ffffff00&chl=$1" alt="#1" title="#1" class="tex">
+gtex = Google Chart API, ASCII, 1, <img src="https://chart.googleapis.com/chart?cht=tx&chf=bg,s,ffffff00&chl=$1" alt="#1" title="#1" class="tex">
 
 # mimeTeX（要インストール http://adiary.org/v3man/Satsuki-tag/tex#mimetex）
 mtex = mimeTeX, ASCII, 1, <img src="${Basepath}mimetex.cgi?$1" alt="#1" title="#1" class="tex">
